# facepp

./: CMakeLists.txt  FacePlusPlus.cpp  HttpClient.hpp  Httpclient.cpp  README  README_CN  build3rd.sh  mian.cpp
SI/: libface++.IAB  libface++.IAD  libface++.IMB  libface++.IMD  libface++.PFI  libface++.PO  libface++.PR  libface++.PRI  libface++.PS  libface++.SearchResults  libface++.WK3
http/: FaceApi.hpp  http_post.cpp  http_post.hpp  httputil.cpp  httputil.hpp
include/common/: comdef.h  debug.h  global.h  retcode.h  types.h
json_api/: json_access_api.cpp  json_access_api.h  json_frm_parse.cpp  json_frm_parse.h  json_packet.cpp  json_packet.h
libs/: CMakeLists.txt  uninstall.sh
src/: CMakeLists.txt
src/common/: main.cpp
src/faceppApi/: detect.cpp  http_get.cpp  person.cpp  read_cfg.cpp  recognition.cpp
src/http/: HttpClient.cpp  HttpClient.h  http_post.cpp  http_post.h
thirdparth/: install.sh  install_first.sh  uninstall.sh
thirdparth/JsonTencent/: CMakeLists.txt
thirdparth/curl/: build.sh
thirdparth/iniParser/: build.sh  iniparser.tar.bz2
thirdparth/jsoncpp/: build.sh  jsoncpp_src.tar.bz2
thirdparth/openssl/: build.sh
thirdparth/sqlite3/: build.sh
thirdparth/zlog/: build.sh
